# select-ai-apex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: checks.yml
apex/: manifest.json
data/demo/: README.md  manifest.json
data/demo/flexcube_demo/: README.md  install.sql  manifest.json
data/demo/sh_demo/: README.md  install.sql  manifest.json
data/flexcube_demo/: questions.csv
data/flexcube_demo/data/: FLEX_ACTB_ACCBAL_HISTORY.csv  FLEX_ACTB_DAILY_LOG_1.json  FLEX_ACTB_DAILY_LOG_2.json  FLEX_ACTB_FUNCOL.json  FLEX_ACTB_LOC_AMOUNT_BLOCKS.csv  FLEX_CLTB_LIQ.json  FLEX_CSTB_CONTRACT_EVENT_LOG.csv  FLEX_CSTB_CONTRACT_EVENT_LOG.json  FLEX_CSTB_CONT_EVENT_LOG_ARCHIVE.json  FLEX_CSTM_FUNCTION_USERDEF_FIELDS.csv  FLEX_CSTM_FUNCTION_USERDEF_FIELDS.json  FLEX_CSTM_PRODUCT.json  FLEX_DETB_RTL_TELLER_2.json  FLEX_ICTM_ACC.json  (+25 more)
docs/: live-acceptance.md  official-sources.md  security-model.md
installer/: cli.py  constants.py  db.py  demo_data.py  models.py  oci_config.py  report.py  sqlgen.py  terraform_vars.py  wallet.py
installer/select_ai_apex/: __init__.py  cli.py  constants.py  db.py  demo_data.py  secrets.py  sqlgen.py  validators.py
scripts/: check-project.ps1  generate_demo_schema_sql.py  validate_demo_catalog.py
sql/admin/: 01_admin_bootstrap.sql.tmpl
sql/apex/: 03_apex_import_prelude.sql.tmpl
sql/select_ai/: 02_select_ai_profile.sql.tmpl
terraform/: README.md  database.tf  outputs.tf  variables.tf
tests/: test_cli.py  test_oci_config.py  test_sqlgen.py  test_support.py  test_terraform_vars.py  test_wallet.py
(+157 files in other folders)
